# vibing2

./: .gitignore  ACTIVEAGENTS_JSON_FIX.md  AGENT_SYSTEM_IMPLEMENTATION.md  AIWRAP_INTEGRATION_PLAN.md  AI_OUTPUT_REFINEMENT.md  ALL_FEATURES_IMPLEMENTATION_COMPLETE.md  AUTH_FIX_COMPLETE.md  AUTO_AGENT_SELECTION.md  AUTO_SAVE_FIX.md  AWS_DEPLOYMENT.md  AWS_DEPLOYMENT_COMPLETE.md  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_STATUS.md  AWS_VERIFICATION_COMPLETE.md  BUILD_FIX_COMPLETE.md  CLAUDE_AUTH_FINAL_SUMMARY.md  CLAUDE_AUTH_IMPL_STATUS.md  CLAUDE_CODE_AUTH_IMPLEMENTATION.md  CLAUDE_CODE_AUTH_SUMMARY.md  CLIPBOARD_PASTE_FEATURE.md  COLLABORATION_GUIDE.md  COMPETITIONS_COMPLETE.md  COMPETITIONS_PLAN.md  COMPLETE_FEATURES_SUMMARY.md  CREATE_PAGE_API_KEY_FIX.md  CREATE_PAGE_FIX.md  CREATE_PAGE_IMPLEMENTATION_COMPLETE.md  CREATE_PAGE_IMPROVEMENTS.md  DASHBOARD_FIX_COMPLETE.md  DATABASE_MIGRATION_GUIDE.md  DATABASE_OPTIMIZATION_REPORT.md  DAYTONA_COMPLETE.md  DAYTONA_SETUP.md  DEBUG_400_ERROR.md  DEBUG_500_ERRORS_FIXED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NEW_AWS_INSTANCE.md  DESKTOP_APP_FINAL_STATUS.md  (+145 more)
vibing2-desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
vibing2-desktop/src-tauri/capabilities/: default.json
vibing2-desktop/src-tauri/icons/: .placeholder  DESIGN_SPEC.md  ICON_PREVIEW.txt  README.md  generate-basic-icon.js  generate-icon.html
vibing2-desktop/src-tauri/src/: auth.rs  commands.rs  database.rs  lib.rs  main.rs  tray.rs  updater.rs
vibing2-desktop/src-tauri/src/server/: config.rs  mod.rs  static_files.rs
vibing2-desktop/src-tauri/src/server/api/: agents.rs  auth.rs  mod.rs  projects.rs  stream.rs
vibing2-desktop/src-tauri/src/server/utils/: mod.rs  (+2 more)
vibing2-desktop/src-tauri/tests/: integration_tests.rs  test_utils.rs
(+219 files in other folders)
